--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ permalink: /:year/:month/:title
 paginate: 5
 
 highlighter: pygments
-markdown: kramdown
+markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 
