--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: http://lihui.github.io
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
 baseurl: 
-
+github: lihui
 # This can be '' to hide the Github nav button
 
 # Set this to your UA-# value, or '' to disable the block completely
