--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ url: http://lihui.github.io
 # be the project name.
 # *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
 #     run it like so: jekyll serve --baseurl=''
-baseurl: 
-github: lihui
+baseurl: ''
+github: ''
 # This can be '' to hide the Github nav button
 
 # Set this to your UA-# value, or '' to disable the block completely
