--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: lihui blog 
-description: desc
+name: 灵元 
+description: 给时光以生命，给存在以觉知
 
 # url is currently only used only for the RSS feed in feed.xml
 url: http://lihui.github.io
